# conanlib

./: CMakeLists.txt  conanfile.py  conanlib.cpp
include/: conanlib.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
